--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 --- 
 layout: default 
-title: Alain's Tech Blog 
-description: Sharing about Application Development, Integration, Cloud, Big Data and Digital Transformation 
+title: Le Blog techno NSI 
+description: Partage d'idées, de cours et d'activités liées aux sciences numériques ensignées en Première et Terminale
 comments: true 
 ---
 
