--- a/404.html
+++ b/404.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: "404: Page not found"
+title: "404: Page non trouvée"
 permalink: 404.html
 ---
 
 <div>
-  <h1>404: Page not found</h1>
+  <h1>404: Cette page est inexistante</h1>
 </div>
