--- a/_pages/about.html
+++ b/_pages/about.html
@@ -3,26 +3,11 @@ layout: default
 title: About
 permalink: /about/
 ---
-<h1>Good day fellow readers and welcome to my tech blog !</h1>
+<h1>Bonjour et bienvenue sur le blog tech NSI !</h1>
 
 <p>
-My name Alain Pham.
-I am currently working as a Solution Architect specialized in Application Development.
-My main task is to deliver complex proof of concepts across EMEA to enable the adoption of open source technologies.
-
+Je m'appelle Erwan Gouëllo.
+Je suis prof de maths et d'informatique au [collège Stanislas de Montréal](http://www.stanislas.qc.ca) qui est un lycée français à l'étranger (au Canada en l'occurence).
 </p>
 <p>
-The purpose of my life?
-Since a very young age I have always been passionate about ecosystems of technology. So my purpose on earth is
-making it possible to advantage of a wide range of technologies and methods and to solve one complex problem after another.
-</p>
-
-<p>
-You can also follow me on social media:  <br>
-<a href="http://github.com/alainpham">
-			<i class="fa fa-github fa-3x"></i></a>
-	<a href="http://www.linkedin.com/in/alainpham">
-			<i class="fa fa-linkedin-square fa-3x"></i></a>
-	<a href="https://twitter.com/koint">
-			<i class="fa fa-twitter fa-3x"></i></a>
-</p>
+Je partage mon temps de travail entre des classes de maths (6eme, 3eme, Terminale S) et des classes d'informatique (première NSI)</p>
