--- a/tags.html
+++ b/tags.html
@@ -133,7 +133,6 @@
 
 <!-- begin post -->
 
-
 <div class="col-lg-4 col-md-6 mb-30px card-group">
     <div class="card h-100">
         <div class="maxthumb">
@@ -150,7 +149,7 @@
         <div class="card-body">
             <h2 class="card-title">
                 <a class="text-dark" href="/customer-service/">Inception Movie</a>
-                
+                <div style="font-size: 1rem;color: rgb(150, 150, 150); white-space: pre-line;">120$</div>
             </h2>
             <h4 class="card-text">Description de l’article
 </h4>
@@ -181,7 +180,6 @@
 
 <!-- begin post -->
 
-
 <div class="col-lg-4 col-md-6 mb-30px card-group">
     <div class="card h-100">
         <div class="maxthumb">
@@ -198,7 +196,7 @@
         <div class="card-body">
             <h2 class="card-title">
                 <a class="text-dark" href="/customer-service/">Inception Movie</a>
-                
+                <div style="font-size: 1rem;color: rgb(150, 150, 150); white-space: pre-line;">120$</div>
             </h2>
             <h4 class="card-text">Description de l’article
 </h4>
