--- a/about.html
+++ b/about.html
@@ -125,6 +125,7 @@
     <section>
     <div class="section-title">
         <h2><span>Nous contacter</span></h2>
+        <div style="font-size: smaller;color: rgb(150, 150, 150); white-space: pre-line;"></div>
     </div>
 
     <div class="article-post">
