--- a/about.html
+++ b/about.html
@@ -140,12 +140,12 @@
 
 <p>Ce site présente tout ce que nous vendons pour notre déménagement en juillet 2024. Pour acheter un article, contacter Erwan <a href="mailto:erwan.gouello@stanislas.qc.ca">erwan.gouello@stanislas.qc.ca</a> ou Frédérique</p>
 
+<p>Cliquez sur les articles pour afficher le détail</p>
+
 <p>Revenez sur le site car des nouveaux articles seront ajoutés au fur et à mesure. Les articles vendus et réservés seront enlevés du site donc si vous voyez un article, c'est qu'il est disponible...</p>
 
-
 </div>
 </div>
-
 
     </div>
 
