--- a/categories.html
+++ b/categories.html
@@ -2942,7 +2942,7 @@ largeur 70cm
                 <a class="text-dark" href="/secheuse/">Sèche-linge - sécheuse - LG</a>
                 <div style="font-size: 1rem;color: rgb(150, 150, 150); white-space: pre-line;">150$, 250$ si acheté avec la laveuse</div>
             </h2>
-            <h4 class="card-text">
+            <h4 class="card-text">27 pouces (largeur) x 27 pouces (profondeur) x 39 pouces (hauteur)
 </h4>
         </div>
         <div class="card-footer bg-white">
@@ -2981,7 +2981,7 @@ largeur 70cm
                 <a class="text-dark" href="/laveuse/">Machine à laver - laveuse - LG</a>
                 <div style="font-size: 1rem;color: rgb(150, 150, 150); white-space: pre-line;">150$, 250$ si acheté avec la sécheuse</div>
             </h2>
-            <h4 class="card-text">
+            <h4 class="card-text">27 pouces (largeur) x 27 pouces (profondeur) x 39 pouces (hauteur)
 </h4>
         </div>
         <div class="card-footer bg-white">
