--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                             <div style="font-size: 1rem;color: rgb(150, 150, 150); white-space: pre-line;">150$, 250$ si acheté avec la laveuse</div>
                             </h2>
 
-                            <h4 class="card-text">
+                            <h4 class="card-text">27 pouces (largeur) x 27 pouces (profondeur) x 39 pouces (hauteur)
 </h4>
                         </div>
                         <div class="card-footer b-0 bg-white mt-auto">
@@ -280,7 +280,7 @@
                             <div style="font-size: 1rem;color: rgb(150, 150, 150); white-space: pre-line;">150$, 250$ si acheté avec la sécheuse</div>
                             </h2>
 
-                            <h4 class="card-text">
+                            <h4 class="card-text">27 pouces (largeur) x 27 pouces (profondeur) x 39 pouces (hauteur)
 </h4>
                         </div>
                         <div class="card-footer b-0 bg-white mt-auto">
@@ -554,7 +554,7 @@
                 <a class="text-dark" href="/secheuse/">Sèche-linge - sécheuse - LG</a>
                 <div style="font-size: 1rem;color: rgb(150, 150, 150); white-space: pre-line;">150$, 250$ si acheté avec la laveuse</div>
             </h2>
-            <h4 class="card-text">
+            <h4 class="card-text">27 pouces (largeur) x 27 pouces (profondeur) x 39 pouces (hauteur)
 </h4>
         </div>
         <div class="card-footer bg-white">
@@ -701,7 +701,7 @@
                 <a class="text-dark" href="/laveuse/">Machine à laver - laveuse - LG</a>
                 <div style="font-size: 1rem;color: rgb(150, 150, 150); white-space: pre-line;">150$, 250$ si acheté avec la sécheuse</div>
             </h2>
-            <h4 class="card-text">
+            <h4 class="card-text">27 pouces (largeur) x 27 pouces (profondeur) x 39 pouces (hauteur)
 </h4>
         </div>
         <div class="card-footer bg-white">
