--- a/laveuse/index.html
+++ b/laveuse/index.html
@@ -166,7 +166,8 @@
                 <!-- End Toc -->
                 <h4>Laveuse LG</h4>
                 
-                
+                <p>27 pouces (largeur) x 27 pouces (profondeur) x 39 pouces (hauteur)</p>
+
 
             </div>
             <!-- Post Image 2 and image 3-->
