--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                             <div style="font-size: 1rem;color: rgb(150, 150, 150); white-space: pre-line;">100$</div>
                             </h2>
 
-                            <h4 class="card-text">Manteau d’hiver long. Bien chaud.
+                            <h4 class="card-text">Manteau d’hiver long. Marque Simons Djab.
 </h4>
                         </div>
                         <div class="card-footer b-0 bg-white mt-auto">
@@ -664,7 +664,7 @@
                 <a class="text-dark" href="/manteau/">Manteau d'hiver pour homme</a>
                 <div style="font-size: 1rem;color: rgb(150, 150, 150); white-space: pre-line;">100$</div>
             </h2>
-            <h4 class="card-text">Manteau d’hiver long. Bien chaud.
+            <h4 class="card-text">Manteau d’hiver long. Marque Simons Djab.
 </h4>
         </div>
         <div class="card-footer bg-white">
