--- a/manteau/index.html
+++ b/manteau/index.html
@@ -166,11 +166,11 @@
                 <!-- End Toc -->
                 <h4>Manteau d'hiver Simons Djab pour homme. Taille M</h4>
                 
-                <p>Manteau d’hiver long. Bien chaud.</p>
+                <p>Manteau d’hiver long. Marque Simons Djab.</p>
 
-<p>Acheté en décembre 22 (a fait 2 hivers) chez Simons</p>
+<p>Acheté en décembre 22 (a fait 2 hivers), il est super chaud et très confortable.</p>
 
-<p>Plein de poches intérieures et extérieures, doublure synthétique 3M thinsulate</p>
+<p>Plein de poches intérieures et extérieures, doublure synthétique 3M thinsulate.</p>
 
             </div>
             <!-- Post Image 2 and image 3-->
