--- a/secheuse/index.html
+++ b/secheuse/index.html
@@ -144,7 +144,7 @@
                 <h1 class="posttitle">Sèche-linge - sécheuse - LG
                 <div style="font-size: smaller;color: rgb(150, 150, 150)">150$, 250$ si acheté avec la laveuse</div>
                 <div style="font-size: smaller;color: rgb(240, 91, 10)">disponibilité : fin juin</div>
-                <div style="font-size: smaller;color: rgb(140,140,140)">État : Très bon - âge 12 ans</div>
+                <div style="font-size: smaller;color: rgb(140,140,140)">État : Bon - âge 12 ans</div>
                 </h1>
 
             
