--- a/categories.html
+++ b/categories.html
@@ -2553,7 +2553,7 @@ Idéal pour les smoothies, faire du pesto, broyer de la glace ou réduire des gr
                 <a class="text-dark" href="/manteau/">Manteau d'hiver pour homme</a>
                 <div style="font-size: 1rem;color: rgb(150, 150, 150); white-space: pre-line;">100$</div>
             </h2>
-            <h4 class="card-text">Manteau d’hiver long. Bien chaud.
+            <h4 class="card-text">Manteau d’hiver long. Marque Simons Djab.
 </h4>
         </div>
         <div class="card-footer bg-white">
@@ -3028,7 +3028,7 @@ largeur 70cm
                 <a class="text-dark" href="/manteau/">Manteau d'hiver pour homme</a>
                 <div style="font-size: 1rem;color: rgb(150, 150, 150); white-space: pre-line;">100$</div>
             </h2>
-            <h4 class="card-text">Manteau d’hiver long. Bien chaud.
+            <h4 class="card-text">Manteau d’hiver long. Marque Simons Djab.
 </h4>
         </div>
         <div class="card-footer bg-white">
