--- a/categories.html
+++ b/categories.html
@@ -2832,7 +2832,7 @@ Idéal pour les smoothies, faire du pesto, broyer de la glace ou réduire des gr
         <div class="card-body">
             <h2 class="card-title">
                 <a class="text-dark" href="/manteau/">Manteau d'hiver pour homme</a>
-                <div style="font-size: 1rem;color: rgb(150, 150, 150); white-space: pre-line;">~~100$~~ 80$</div>
+                <div style="font-size: 1rem;color: rgb(150, 150, 150); white-space: pre-line;">80$</div>
             </h2>
             <h4 class="card-text">Manteau d’hiver long. Marque Simons Djab.
 </h4>
@@ -3182,7 +3182,7 @@ largeur 70cm
         <div class="card-body">
             <h2 class="card-title">
                 <a class="text-dark" href="/manteau/">Manteau d'hiver pour homme</a>
-                <div style="font-size: 1rem;color: rgb(150, 150, 150); white-space: pre-line;">~~100$~~ 80$</div>
+                <div style="font-size: 1rem;color: rgb(150, 150, 150); white-space: pre-line;">80$</div>
             </h2>
             <h4 class="card-text">Manteau d’hiver long. Marque Simons Djab.
 </h4>
