--- a/Enceintes-M-Audio/index.html
+++ b/Enceintes-M-Audio/index.html
@@ -142,7 +142,12 @@
 
                 <!-- Post Title -->
                 <h1 class="posttitle">Enceintes M-Audio AV-40
-                <div style="font-size: smaller;color: rgb(150, 150, 150)">80$</div>
+                <div style="font-size: smaller;color: rgb(150, 150, 150)">
+                    
+                        <strike>80$</strike>
+                    
+                    60$
+                </div>
                 <div style="font-size: smaller;color: rgb(240, 91, 10)">disponibilité : dès maintenant</div>
                 <div style="font-size: smaller;color: rgb(140,140,140)">État : un peu sale, fonctionne très bien, léger souffle sur l'enceinte de droite</div>
                 </h1>
