--- a/Rollerenfant/index.html
+++ b/Rollerenfant/index.html
@@ -142,7 +142,12 @@
 
                 <!-- Post Title -->
                 <h1 class="posttitle">Paire de rollerblades pour enfant
-                <div style="font-size: smaller;color: rgb(150, 150, 150)">30$</div>
+                <div style="font-size: smaller;color: rgb(150, 150, 150)">
+                    
+                        <strike>30$</strike>
+                    
+                    20$
+                </div>
                 <div style="font-size: smaller;color: rgb(240, 91, 10)">disponibilité : dès maintenant</div>
                 <div style="font-size: smaller;color: rgb(140,140,140)">État : Usés mais fonctionnement bien</div>
                 </h1>
