--- a/_pages/vendu/2024-02-29-Souris/index.html
+++ b/_pages/vendu/2024-02-29-Souris/index.html
@@ -141,7 +141,10 @@
 
                 <!-- Post Title -->
                 <h1 class="posttitle">Souris sans fil Logitech MX Master
-                <div style="font-size: smaller;color: rgb(150, 150, 150)">70$</div>
+                <div style="font-size: smaller;color: rgb(150, 150, 150)">
+                    
+                    70$
+                </div>
                 <div style="font-size: smaller;color: rgb(240, 91, 10)">disponibilité : juin</div>
                 <div style="font-size: smaller;color: rgb(140,140,140)">État : Très bon</div>
                 </h1>
