--- a/ektorp3/index.html
+++ b/ektorp3/index.html
@@ -142,7 +142,12 @@
 
                 <!-- Post Title -->
                 <h1 class="posttitle">canapé 3 places
-                <div style="font-size: smaller;color: rgb(150, 150, 150)">200$</div>
+                <div style="font-size: smaller;color: rgb(150, 150, 150)">
+                    
+                        <strike>200$</strike>
+                    
+                    150$
+                </div>
                 <div style="font-size: smaller;color: rgb(240, 91, 10)">disponibilité : avril</div>
                 <div style="font-size: smaller;color: rgb(140,140,140)">État : bon</div>
                 </h1>
