--- a/fauteuil-de-bureau/index.html
+++ b/fauteuil-de-bureau/index.html
@@ -142,7 +142,10 @@
 
                 <!-- Post Title -->
                 <h1 class="posttitle">fauteuil de bureau
-                <div style="font-size: smaller;color: rgb(150, 150, 150)">30$</div>
+                <div style="font-size: smaller;color: rgb(150, 150, 150)">
+                    
+                    30$
+                </div>
                 <div style="font-size: smaller;color: rgb(240, 91, 10)">disponibilité : juin</div>
                 <div style="font-size: smaller;color: rgb(140,140,140)">État : usé, quelques tâches sur le tissu, poignée mordillée par le chien</div>
                 </h1>
