--- a/fauteuil/index.html
+++ b/fauteuil/index.html
@@ -142,7 +142,12 @@
 
                 <!-- Post Title -->
                 <h1 class="posttitle">fauteuil
-                <div style="font-size: smaller;color: rgb(150, 150, 150)">30$</div>
+                <div style="font-size: smaller;color: rgb(150, 150, 150)">
+                    
+                        <strike>30$</strike>
+                    
+                    20$
+                </div>
                 <div style="font-size: smaller;color: rgb(240, 91, 10)">disponibilité : mai</div>
                 <div style="font-size: smaller;color: rgb(140,140,140)">État : usé, le tissu est abimé, la structure en bois est solide mais mordillée par le chien</div>
                 </h1>
