--- a/frigo/index.html
+++ b/frigo/index.html
@@ -142,7 +142,10 @@
 
                 <!-- Post Title -->
                 <h1 class="posttitle">Réfrigérateur Whirlpool 18.5 pieds cubes, congelateur en bas
-                <div style="font-size: smaller;color: rgb(150, 150, 150)">190$</div>
+                <div style="font-size: smaller;color: rgb(150, 150, 150)">
+                    
+                    190$
+                </div>
                 <div style="font-size: smaller;color: rgb(240, 91, 10)">disponibilité : juin</div>
                 <div style="font-size: smaller;color: rgb(140,140,140)">État : Bon - age 10 ans</div>
                 </h1>
