--- a/jardiniere/index.html
+++ b/jardiniere/index.html
@@ -142,7 +142,10 @@
 
                 <!-- Post Title -->
                 <h1 class="posttitle">jardinieres de balcon
-                <div style="font-size: smaller;color: rgb(150, 150, 150)">20$ les 6</div>
+                <div style="font-size: smaller;color: rgb(150, 150, 150)">
+                    
+                    20$ les 6
+                </div>
                 <div style="font-size: smaller;color: rgb(240, 91, 10)">disponibilité : dès maintenant</div>
                 <div style="font-size: smaller;color: rgb(140,140,140)">État : Correct</div>
                 </h1>
