--- a/laveuse/index.html
+++ b/laveuse/index.html
@@ -142,7 +142,10 @@
 
                 <!-- Post Title -->
                 <h1 class="posttitle">Machine à laver - laveuse - LG
-                <div style="font-size: smaller;color: rgb(150, 150, 150)">150$, 250$ si acheté avec la sécheuse</div>
+                <div style="font-size: smaller;color: rgb(150, 150, 150)">
+                    
+                    150$, 250$ si acheté avec la sécheuse
+                </div>
                 <div style="font-size: smaller;color: rgb(240, 91, 10)">disponibilité : fin juin</div>
                 <div style="font-size: smaller;color: rgb(140,140,140)">État : Bon, un peu de rouillée sur le dessus - âge 12 ans</div>
                 </h1>
