--- a/manteau/index.html
+++ b/manteau/index.html
@@ -142,7 +142,12 @@
 
                 <!-- Post Title -->
                 <h1 class="posttitle">Manteau d'hiver pour homme
-                <div style="font-size: smaller;color: rgb(150, 150, 150)">80$</div>
+                <div style="font-size: smaller;color: rgb(150, 150, 150)">
+                    
+                        <strike>100$</strike>
+                    
+                    80$
+                </div>
                 <div style="font-size: smaller;color: rgb(240, 91, 10)">disponibilité : dès maintenant</div>
                 <div style="font-size: smaller;color: rgb(140,140,140)">État : Très bon</div>
                 </h1>
