--- a/ordi/index.html
+++ b/ordi/index.html
@@ -142,7 +142,10 @@
 
                 <!-- Post Title -->
                 <h1 class="posttitle">Ordinateur de bureau
-                <div style="font-size: smaller;color: rgb(150, 150, 150)">100$ pour la tour seule, 200 avec les 2 écrans, clavier et la super souris Logitech</div>
+                <div style="font-size: smaller;color: rgb(150, 150, 150)">
+                    
+                    100$ pour la tour seule, 200 avec les 2 écrans, clavier et la super souris Logitech
+                </div>
                 <div style="font-size: smaller;color: rgb(240, 91, 10)">disponibilité : mai</div>
                 <div style="font-size: smaller;color: rgb(140,140,140)">État : Bon</div>
                 </h1>
