--- a/patinglace/index.html
+++ b/patinglace/index.html
@@ -142,7 +142,12 @@
 
                 <!-- Post Title -->
                 <h1 class="posttitle">Patins de hockey pour homme
-                <div style="font-size: smaller;color: rgb(150, 150, 150)">50$</div>
+                <div style="font-size: smaller;color: rgb(150, 150, 150)">
+                    
+                        <strike>50$</strike>
+                    
+                    40$
+                </div>
                 <div style="font-size: smaller;color: rgb(240, 91, 10)">disponibilité : dès maintenant</div>
                 <div style="font-size: smaller;color: rgb(140,140,140)">État : Bon</div>
                 </h1>
