--- a/reposepied/index.html
+++ b/reposepied/index.html
@@ -142,7 +142,10 @@
 
                 <!-- Post Title -->
                 <h1 class="posttitle">repose-pied
-                <div style="font-size: smaller;color: rgb(150, 150, 150)">60$</div>
+                <div style="font-size: smaller;color: rgb(150, 150, 150)">
+                    
+                    60$
+                </div>
                 <div style="font-size: smaller;color: rgb(240, 91, 10)">disponibilité : mai</div>
                 <div style="font-size: smaller;color: rgb(140,140,140)">État : bon, le tissu est un peu tâché</div>
                 </h1>
