--- a/skim/index.html
+++ b/skim/index.html
@@ -142,7 +142,12 @@
 
                 <!-- Post Title -->
                 <h1 class="posttitle">Ensemble complet de ski de fond - bottes 42
-                <div style="font-size: smaller;color: rgb(150, 150, 150)">120$</div>
+                <div style="font-size: smaller;color: rgb(150, 150, 150)">
+                    
+                        <strike>120$</strike>
+                    
+                    100$
+                </div>
                 <div style="font-size: smaller;color: rgb(240, 91, 10)">disponibilité : dès maintenant</div>
                 <div style="font-size: smaller;color: rgb(140,140,140)">État : Bon</div>
                 </h1>
