--- a/tablebasse/index.html
+++ b/tablebasse/index.html
@@ -142,7 +142,12 @@
 
                 <!-- Post Title -->
                 <h1 class="posttitle">table basse
-                <div style="font-size: smaller;color: rgb(150, 150, 150)">15$</div>
+                <div style="font-size: smaller;color: rgb(150, 150, 150)">
+                    
+                        <strike>15$</strike>
+                    
+                    10$
+                </div>
                 <div style="font-size: smaller;color: rgb(240, 91, 10)">disponibilité : mai</div>
                 <div style="font-size: smaller;color: rgb(140,140,140)">État : usé, le revêtement est abimé, pas d'étage intermédiaire</div>
                 </h1>
