--- a/Imprimante-Workforce-845/index.html
+++ b/Imprimante-Workforce-845/index.html
@@ -142,7 +142,10 @@
 
                 <!-- Post Title -->
                 <h1 class="posttitle">Imprimante Workforce 845
-                <div style="font-size: smaller;color: rgb(150, 150, 150)">80$</div>
+                <div style="font-size: smaller;color: rgb(150, 150, 150)">
+                    
+                    80$
+                </div>
                 <div style="font-size: smaller;color: rgb(240, 91, 10)">disponibilité : dès maintenant</div>
                 <div style="font-size: smaller;color: rgb(140,140,140)">État : Très bon</div>
                 </h1>
