--- a/Server/index.html
+++ b/Server/index.html
@@ -142,7 +142,10 @@
 
                 <!-- Post Title -->
                 <h1 class="posttitle">Serveur Thinkserver de Lenovo
-                <div style="font-size: smaller;color: rgb(150, 150, 150)">160$</div>
+                <div style="font-size: smaller;color: rgb(150, 150, 150)">
+                    
+                    160$
+                </div>
                 <div style="font-size: smaller;color: rgb(240, 91, 10)">disponibilité : dès maintenant</div>
                 <div style="font-size: smaller;color: rgb(140,140,140)">État : Très bon</div>
                 </h1>
