--- a/_pages/vendu/2024-02-26-ektorp2/index.html
+++ b/_pages/vendu/2024-02-26-ektorp2/index.html
@@ -141,7 +141,10 @@
 
                 <!-- Post Title -->
                 <h1 class="posttitle">canapé 2 places
-                <div style="font-size: smaller;color: rgb(150, 150, 150)">140$</div>
+                <div style="font-size: smaller;color: rgb(150, 150, 150)">
+                    
+                    140$
+                </div>
                 <div style="font-size: smaller;color: rgb(240, 91, 10)">disponibilité : juin</div>
                 <div style="font-size: smaller;color: rgb(140,140,140)">État : usé, dossiers un peu écrasés</div>
                 </h1>
