--- a/_pages/vendu/2024-02-26-induction/index.html
+++ b/_pages/vendu/2024-02-26-induction/index.html
@@ -141,7 +141,10 @@
 
                 <!-- Post Title -->
                 <h1 class="posttitle">plaque à induction
-                <div style="font-size: smaller;color: rgb(150, 150, 150)">45$</div>
+                <div style="font-size: smaller;color: rgb(150, 150, 150)">
+                    
+                    45$
+                </div>
                 <div style="font-size: smaller;color: rgb(240, 91, 10)">disponibilité : mai</div>
                 <div style="font-size: smaller;color: rgb(140,140,140)">État : Bon</div>
                 </h1>
