--- a/_pages/vendu/2024-02-26-puzzle/index.html
+++ b/_pages/vendu/2024-02-26-puzzle/index.html
@@ -141,7 +141,10 @@
 
                 <!-- Post Title -->
                 <h1 class="posttitle">lot de puzzles et jeu
-                <div style="font-size: smaller;color: rgb(150, 150, 150)">40$</div>
+                <div style="font-size: smaller;color: rgb(150, 150, 150)">
+                    
+                    40$
+                </div>
                 <div style="font-size: smaller;color: rgb(240, 91, 10)">disponibilité : dès maintenant</div>
                 <div style="font-size: smaller;color: rgb(140,140,140)">État : Bon</div>
                 </h1>
