--- a/_pages/vendu/2024-02-26-sodastream/index.html
+++ b/_pages/vendu/2024-02-26-sodastream/index.html
@@ -141,7 +141,10 @@
 
                 <!-- Post Title -->
                 <h1 class="posttitle">Sodastream
-                <div style="font-size: smaller;color: rgb(150, 150, 150)">50$</div>
+                <div style="font-size: smaller;color: rgb(150, 150, 150)">
+                    
+                    50$
+                </div>
                 <div style="font-size: smaller;color: rgb(240, 91, 10)">disponibilité : mai</div>
                 <div style="font-size: smaller;color: rgb(140,140,140)">État : très bon</div>
                 </h1>
