--- a/_pages/vendu/2024-02-29-perceuse visseuse sans fil/index.html
+++ b/_pages/vendu/2024-02-29-perceuse visseuse sans fil/index.html
@@ -141,7 +141,10 @@
 
                 <!-- Post Title -->
                 <h1 class="posttitle">Perceuse visseuse sans fil
-                <div style="font-size: smaller;color: rgb(150, 150, 150)">40$</div>
+                <div style="font-size: smaller;color: rgb(150, 150, 150)">
+                    
+                    40$
+                </div>
                 <div style="font-size: smaller;color: rgb(240, 91, 10)">disponibilité : juin</div>
                 <div style="font-size: smaller;color: rgb(140,140,140)">État : Très bon</div>
                 </h1>
