--- a/bibliotheque/index.html
+++ b/bibliotheque/index.html
@@ -142,7 +142,12 @@
 
                 <!-- Post Title -->
                 <h1 class="posttitle">Grande bibliothèque
-                <div style="font-size: smaller;color: rgb(150, 150, 150)">100$</div>
+                <div style="font-size: smaller;color: rgb(150, 150, 150)">
+                    
+                        <strike>100$</strike>
+                    
+                    80$
+                </div>
                 <div style="font-size: smaller;color: rgb(240, 91, 10)">disponibilité : dès maintenant</div>
                 <div style="font-size: smaller;color: rgb(140,140,140)">État : Bon</div>
                 </h1>
