--- a/chaiseenfant/index.html
+++ b/chaiseenfant/index.html
@@ -142,7 +142,10 @@
 
                 <!-- Post Title -->
                 <h1 class="posttitle">chaise de bureau pour enfant
-                <div style="font-size: smaller;color: rgb(150, 150, 150)">30$</div>
+                <div style="font-size: smaller;color: rgb(150, 150, 150)">
+                    
+                    30$
+                </div>
                 <div style="font-size: smaller;color: rgb(240, 91, 10)">disponibilité : juin</div>
                 <div style="font-size: smaller;color: rgb(140,140,140)">État : Très bon</div>
                 </h1>
