--- a/lampearchi/index.html
+++ b/lampearchi/index.html
@@ -142,7 +142,10 @@
 
                 <!-- Post Title -->
                 <h1 class="posttitle">Lampe d'architecte
-                <div style="font-size: smaller;color: rgb(150, 150, 150)">30$</div>
+                <div style="font-size: smaller;color: rgb(150, 150, 150)">
+                    
+                    30$
+                </div>
                 <div style="font-size: smaller;color: rgb(240, 91, 10)">disponibilité : dès maintenant</div>
                 <div style="font-size: smaller;color: rgb(140,140,140)">État : Très Bon</div>
                 </h1>
