--- a/velo-adulte-hybride/index.html
+++ b/velo-adulte-hybride/index.html
@@ -142,7 +142,10 @@
 
                 <!-- Post Title -->
                 <h1 class="posttitle">vélo hybride
-                <div style="font-size: smaller;color: rgb(150, 150, 150)">400$</div>
+                <div style="font-size: smaller;color: rgb(150, 150, 150)">
+                    
+                    400$
+                </div>
                 <div style="font-size: smaller;color: rgb(240, 91, 10)">disponibilité : juin</div>
                 <div style="font-size: smaller;color: rgb(140,140,140)">État : Bon</div>
                 </h1>
