--- a/velo-enfant/index.html
+++ b/velo-enfant/index.html
@@ -142,7 +142,10 @@
 
                 <!-- Post Title -->
                 <h1 class="posttitle">vélo enfant 8-11 ans
-                <div style="font-size: smaller;color: rgb(150, 150, 150)">80$</div>
+                <div style="font-size: smaller;color: rgb(150, 150, 150)">
+                    
+                    80$
+                </div>
                 <div style="font-size: smaller;color: rgb(240, 91, 10)">disponibilité : dès maintenant</div>
                 <div style="font-size: smaller;color: rgb(140,140,140)">État : Bon</div>
                 </h1>
