--- a/velo-femme/index.html
+++ b/velo-femme/index.html
@@ -142,7 +142,10 @@
 
                 <!-- Post Title -->
                 <h1 class="posttitle">vélo femme
-                <div style="font-size: smaller;color: rgb(150, 150, 150)">260$</div>
+                <div style="font-size: smaller;color: rgb(150, 150, 150)">
+                    
+                    260$
+                </div>
                 <div style="font-size: smaller;color: rgb(240, 91, 10)">disponibilité : dès maintenant</div>
                 <div style="font-size: smaller;color: rgb(140,140,140)">État : Bon - Age 15 ans mais très peu utilisé</div>
                 </h1>
