--- a/Écran-17-pouces/index.html
+++ b/Écran-17-pouces/index.html
@@ -142,7 +142,10 @@
 
                 <!-- Post Title -->
                 <h1 class="posttitle">Moniteur d'ordinateur 17 pouces
-                <div style="font-size: smaller;color: rgb(150, 150, 150)">50$</div>
+                <div style="font-size: smaller;color: rgb(150, 150, 150)">
+                    
+                    50$
+                </div>
                 <div style="font-size: smaller;color: rgb(240, 91, 10)">disponibilité : dès maintenant</div>
                 <div style="font-size: smaller;color: rgb(140,140,140)">État : Bon</div>
                 </h1>
